--- a/MooSeum/app/src/main/res/values/strings.xml
+++ b/MooSeum/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MooSeum</string>
+    <string name="play_btn_txt">Play</string>
+    <string name="scan_btn_txt">Scan</string>
+    <string name="connect_btn_txt">Connect</string>
 </resources>
