Added text view and attempting to add listener for each button, should make uml for over all layout as soon as I grasp what the structure needs to be like

--- a/MooSeum/app/src/main/res/values/strings.xml
+++ b/MooSeum/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">MooSeum</string>
+
+    <string name="default_text">Press a button! :D</string>
+
+
     <string name="play_btn_txt">Play</string>
     <string name="scan_btn_txt">Scan</string>
     <string name="connect_btn_txt">Connect</string>
