--- a/MooSeum/app/src/main/res/values/strings.xml
+++ b/MooSeum/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MooSeum</string>
+    <string name="app_name">EE475</string>
 
     <string name="default_text">Press a button! :D</string>
 
