--- a/QuizTagApp/app/src/main/res/values/strings.xml
+++ b/QuizTagApp/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="skip_icon_description">Skip</string>
     <string name="hint_icon_description">Hint</string>
     <string name="coin_icon_description">Coins</string>
+    <string name="tool_bar_back_button_text">Back</string>
 </resources>
