added a class to play with nfc, currently works when pressing scan, added menu options to buy hints and skips without quitting the game, and minor bug fixes

--- a/QuizTagApp/app/src/main/res/values/strings.xml
+++ b/QuizTagApp/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="tool_bar_back_button_text">Back</string>
     <string name="question_screen_title">Question</string>
     <string name="quit_button_text">Quit</string>
+    <string name="buy_hints">Buy Hints</string>
+    <string name="buy_skips">Buy Skips</string>
 </resources>
