--- a/QuizTagApp/app/src/main/res/values/strings.xml
+++ b/QuizTagApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">QuizTag</string>
+    <string name="app_name">MooTag</string>
 
     <string name="default_text">Press a button! :D</string>
 
