made some minor changes to the update listeners method in question screen and added comments

--- a/QuizTagApp/app/src/main/res/values/strings.xml
+++ b/QuizTagApp/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="buy_skips">Buy Skips</string>
     <string name="scan_screen_name_field">Name: </string>
     <string name="scan_screen_url_text">see more</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
 </resources>
