--- a/QuizTagApp/app/src/main/res/values/strings.xml
+++ b/QuizTagApp/app/src/main/res/values/strings.xml
@@ -41,4 +41,18 @@
     <string name="points">points</string>
     <string name="not_enough_points">Not Enough Points</string>
     <string name="play_more_earn_points">You don\'t have enough points to buy more hints  \\nPlay the game to earn more points!</string>
+    <string name="null_object_error">Error occured when starting Game Menu</string>
+    <string name="null_object_error_title">Null Object Error</string>
+    <string name="confirm_answer1">\"You have selected:\\n\\n\\t\\t\\t\"</string>
+    <string name="confirm_answer2">\"\\n\\nIs this your final answer?\"</string>
+    <string name="correct">Correct!</string>
+    <string name="points_earned1">\"You earned \"</string>
+    <string name="points_earned2">\" points!\"</string>
+    <string name="incorrect">Incorrect!</string>
+    <string name="try_again">Try Again!</string>
+    <string name="game_menu_title">Game Menu</string>
+    <string name="shop_menu_title">Points Shop</string>
+    <string name="scan_screen_title">Scan</string>
+    <string name="smartcase_title">SmartCase</string>
+    <string name="quiz_tag_title">Quiz Tag</string>
 </resources>
