changed all listened to take activity as a parameter, fixed quiz answering crash, to do, fix game end, fix only one hint showing up, fix quiztag, fix smartscreen not showing up

--- a/QuizTagApp/app/src/main/res/values/strings.xml
+++ b/QuizTagApp/app/src/main/res/values/strings.xml
@@ -40,14 +40,14 @@
     <string name="tag_found">Tag Found</string>
     <string name="points">points</string>
     <string name="not_enough_points">Not Enough Points</string>
-    <string name="play_more_earn_points">You don\'t have enough points to buy more hints  \\nPlay the game to earn more points!</string>
+    <string name="play_more_earn_points">You don\'t have enough points to buy more hints\nPlay the game to earn more points!</string>
     <string name="null_object_error">Error occured when starting Game Menu</string>
     <string name="null_object_error_title">Null Object Error</string>
-    <string name="confirm_answer1">\"You have selected:\\n\\n\\t\\t\\t\"</string>
-    <string name="confirm_answer2">\"\\n\\nIs this your final answer?\"</string>
+    <string name="confirm_answer1">You have selected:\n\n\t\t\t</string>
+    <string name="confirm_answer2">\n\nIs this your final answer?</string>
     <string name="correct">Correct!</string>
-    <string name="points_earned1">\"You earned \"</string>
-    <string name="points_earned2">\" points!\"</string>
+    <string name="points_earned1">You earned </string>
+    <string name="points_earned2"> points!</string>
     <string name="incorrect">Incorrect!</string>
     <string name="try_again">Try Again!</string>
     <string name="game_menu_title">Game Menu</string>
