--- a/QuizTagApp/app/src/main/res/values/strings.xml
+++ b/QuizTagApp/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="quiz_complete_congrats">Congratulations! You have finished the quiz!
         \nFind a QuizTag to play another quiz, or play this again!</string>
     <string name="quit">Quit</string>
+    <string name="final_question">Final Question</string>
 </resources>
